--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     --bg-start: #a01e1c;
     --bg-end: #771817;
     --fg-color: rgb(255, 255, 255);
+    color: white;
 }
 
 * {
@@ -38,18 +39,39 @@ a:active {
     height: 66px;
     width: 100%;
     display: flex;
-    transition: top 0.3s;
+    transition: top 1s;
+    z-index: 1;
 } 
+
+.nav:after{
+    content: "";
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    height: 2px;
+    width: 100%;
+    left: 0;
+    margin-top: 64px;
+    transition: 0.5s;
+}
+
+.nav:hover:after{
+    background-color: rgb(47, 102, 255);
+}
+
+.change .nav:after{
+    background-color: rgb(47, 102, 255);
+}
 
 .logo_text {
     display: flex;
     align-self: center;
     justify-self: center;
     margin-top: 0;
-    margin-left: 37%;
+    margin-left:auto;
     margin-right: auto;
     color: rgb(255, 255, 255);
     transition: 0.5s;
+    cursor: pointer;
 }
 
 .logo_text:hover{
@@ -57,7 +79,7 @@ a:active {
 }
 
 .hamburger {
-    margin-left: auto;
+    margin-left: 1%;
     margin-right: 1%;
     justify-self: right;
     align-self: center;
@@ -155,6 +177,7 @@ a:active {
 
 .navigation {
     font-family: 'Inter', sans-serif;
+    height: 100px;
     font-size: 25px;
     display: flex;
     justify-content: space-around;
@@ -165,9 +188,69 @@ a:active {
 .navigation  a{
     margin-top: 2%;
     color: white;
-    transition: 0.5s;
+    text-decoration: none;
+    position: relative;
+    transition: 1s;
 }
 
 .navigation  a:hover{
     color: rgb(47, 102, 255);
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.navigation  a:after{
+    content: "";
+    position: absolute;
+    background-color: rgb(47, 102, 255);
+    height: 2px;
+    width: 100%;
+    left: 0;
+    margin-top: 40px;
+    transition: 1s;
+    opacity: 0%;
+}
+
+a:hover:after{
+    opacity: 100%;
+    transition: 0.2s;
+}
+
+.earth {
+    pointer-events: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+.myself {
+    font-family: 'Inter', sans-serif;
+    position:relative;
+    transition: 2s ease;
+}
+
+.myself .name {
+    position: absolute;
+    font-size: 600%;
+    top: 20%;
+    left: 5%;
+}
+
+.myself .name a{
+    transition: 7s;
+}
+
+.myself .name a:hover{
+    color: rgb(47, 102, 255);
+    transition: 0s;
+}
+
+.myself .degree {
+    position: absolute;
+    font-size: 200%;
+    top: 28%;
+    left: 5.3%;
 }
