--- a/styles.css
+++ b/styles.css
@@ -376,7 +376,7 @@ a:hover:after{
     position: absolute;
     bottom: 0px;
     transition: 2s;
-    opacity: 100;
+    opacity: 60%;
     animation: MoveUpDown 1.5s linear infinite;
 }
 
